--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,10 +1,11 @@
 body {
   font-family: 'Work Sans', sans-serif;
+  color: black;
 }
 
 .inline-link {
-  color: #212529;
   text-decoration: underline;
+  color: black;
 }
 
 @media (min-width: 768px) {
